--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "debounce": "^1.2.0",
     "dexie": "^2.0.4",
+    "iview": "^3.2.2",
     "vue": "^2.6.6"
   },
   "devDependencies": {
