--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debounce": "^1.2.0",
     "dexie": "^2.0.4",
     "iview": "^3.2.2",
-    "vue": "^2.6.6"
+    "leaflet": "^1.4.0",
+    "leaflet.heat": "^0.2.0",
+    "vue": "^2.6.6",
+    "vue-google-charts": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
